# ConverterNZRI

./: .gitignore  CMakeLists.txt  README.md  main.cpp
logic/: Converter.cpp  Converter.h  hamming.cpp  hamming.h
ui/: converterwindow.cpp  converterwindow.h  converterwindow.ui  hammingwindow.cpp  hammingwindow.h  hammingwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
ui/assets/: resources.qrc
